--- a/what-word.html
+++ b/what-word.html
@@ -15,168 +15,174 @@
 <body>
     <div class="text-center p-2" id = "card-holder">
         <h1 class ="heading title"> What Word?</h1>
+        <div class="error" id="wordError" style = "display: none;">
+            <p>Sorry, that's not on our word list.</p>
+        </div>
+        <div class="error" id="letterNumError" style = "display: none;">
+            <p>Sorry, that's not enough letters.</p>
+        </div>
         <div class="table-container">
             <table class = "main-game">
                 <tbody>
-                    <tr class = "word-container" id = "first-row">  
+                    <tr class = "word-container" id = "row-1">  
                         <td>
                             <div class="letter-container">
-                                <span class = 'game-letters'>A</span>
+                                <span class = 'game-letters' id = "guess-1-1"></span>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="letter-container" >
+                                <span class = 'game-letters' id = "guess-1-2"></span>
                             </div>
                         </td>
                         <td>
                             <div class="letter-container">
-                                <span class = 'game-letters'>B</span>
+                                <span class = 'game-letters' id = 'guess-1-3'></span>
                             </div>
                         </td>
                         <td>
                             <div class="letter-container">
-                                <span class = 'game-letters'>C</span>
+                                <span class = 'game-letters' id = 'guess-1-4'></span>
                             </div>
                         </td>
                         <td>
                             <div class="letter-container">
-                                <span class = 'game-letters'></span>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="letter-container">
-                                <span class = 'game-letters'></span>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr class = "word-container" id = "second-row">  
-                        <td>
-                            <div class="letter-container">
-                                <span class = 'game-letters'></span>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="letter-container">
-                                <span class = 'game-letters'></span>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="letter-container">
-                                <span class = 'game-letters'></span>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="letter-container">
-                                <span class = 'game-letters'></span>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="letter-container">
-                                <span class = 'game-letters'></span>
+                                <span class = 'game-letters' id = 'guess-1-5'></span>
                             </div>
                         </td>
                     </tr>
-                    <tr class = "word-container" id = "third-row">
+                    <tr class = "word-container" id = "row-2">  
                         <td>
                             <div class="letter-container">
-                                <span class = 'game-letters'></span>
+                                <span class = 'game-letters' id = "guess-2-1"></span>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="letter-container" >
+                                <span class = 'game-letters' id = "guess-2-2"></span>
                             </div>
                         </td>
                         <td>
                             <div class="letter-container">
-                                <span class = 'game-letters'></span>
+                                <span class = 'game-letters' id = 'guess-2-3'></span>
                             </div>
                         </td>
                         <td>
                             <div class="letter-container">
-                                <span class = 'game-letters'></span>
+                                <span class = 'game-letters' id = 'guess-2-4'></span>
                             </div>
                         </td>
                         <td>
                             <div class="letter-container">
-                                <span class = 'game-letters'></span>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="letter-container">
-                                <span class = 'game-letters'></span>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr class = "word-container" id = "fourth-row">
-                        <td>
-                            <div class="letter-container">
-                                <span class = 'game-letters'></span>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="letter-container">
-                                <span class = 'game-letters'></span>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="letter-container">
-                                <span class = 'game-letters'></span>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="letter-container">
-                                <span class = 'game-letters'></span>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="letter-container">
-                                <span class = 'game-letters'></span>
+                                <span class = 'game-letters' id = 'guess-2-5'></span>
                             </div>
                         </td>
                     </tr>
-                    <tr class = "word-container" id = "fifth-row">
+                    <tr class = "word-container" id = "row-3">
                         <td>
                             <div class="letter-container">
-                                <span class = 'game-letters'></span>
+                                <span class = 'game-letters' id = "guess-3-1"></span>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="letter-container" >
+                                <span class = 'game-letters' id = "guess-3-2"></span>
                             </div>
                         </td>
                         <td>
                             <div class="letter-container">
-                                <span class = 'game-letters'></span>
+                                <span class = 'game-letters' id = 'guess-3-3'></span>
                             </div>
                         </td>
                         <td>
                             <div class="letter-container">
-                                <span class = 'game-letters'></span>
+                                <span class = 'game-letters' id = 'guess-3-4'></span>
                             </div>
                         </td>
                         <td>
                             <div class="letter-container">
-                                <span class = 'game-letters'></span>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="letter-container">
-                                <span class = 'game-letters'></span>
+                                <span class = 'game-letters' id = 'guess-3-5'></span>
                             </div>
                         </td>
                     </tr>
-                    <tr class = "word-container" id = "sixth-row">
+                    <tr class = "word-container" id = "row-4">
                         <td>
                             <div class="letter-container">
-                                <span class = 'game-letters'></span>
+                                <span class = 'game-letters' id = "guess-4-1"></span>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="letter-container" >
+                                <span class = 'game-letters' id = "guess-4-2"></span>
                             </div>
                         </td>
                         <td>
                             <div class="letter-container">
-                                <span class = 'game-letters'></span>
+                                <span class = 'game-letters' id = 'guess-4-3'></span>
                             </div>
                         </td>
                         <td>
                             <div class="letter-container">
-                                <span class = 'game-letters'></span>
+                                <span class = 'game-letters' id = 'guess-4-4'></span>
                             </div>
                         </td>
                         <td>
                             <div class="letter-container">
-                                <span class = 'game-letters'></span>
+                                <span class = 'game-letters' id = 'guess-4-5'></span>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr class = "word-container" id = "row-5">
+                        <td>
+                            <div class="letter-container">
+                                <span class = 'game-letters' id = "guess-5-1"></span>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="letter-container" >
+                                <span class = 'game-letters' id = "guess-5-2"></span>
                             </div>
                         </td>
                         <td>
                             <div class="letter-container">
-                                <span class = 'game-letters'></span>
+                                <span class = 'game-letters' id = 'guess-5-3'></span>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="letter-container">
+                                <span class = 'game-letters' id = 'guess-5-4'></span>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="letter-container">
+                                <span class = 'game-letters' id = 'guess-5-5'></span>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr class = "word-container" id = "row-6">
+                        <td>
+                            <div class="letter-container">
+                                <span class = 'game-letters' id = "guess-6-1"></span>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="letter-container" >
+                                <span class = 'game-letters' id = "guess-6-2"></span>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="letter-container">
+                                <span class = 'game-letters' id = 'guess-6-3'></span>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="letter-container">
+                                <span class = 'game-letters' id = 'guess-6-4'></span>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="letter-container">
+                                <span class = 'game-letters' id = 'guess-6-5'></span>
                             </div>
                         </td>
                     </tr>
@@ -296,7 +302,7 @@
                     <tr class = "key-row-container" id = "first-key-row">  
                         <td class = "special">
                             <div class="key-letter-container">
-                                <button class = 'btn key-letters' id = "enter">ENTER</button>
+                                <button class = 'btn enter-key' id = "enter">ENTER</button>
                             </div>
                         </td>
                         <td>
@@ -336,7 +342,7 @@
                         </td>
                         <td class = "special">
                             <div class="key-letter-container">
-                                <button class = 'btn key-letters'><i class="fa-solid fa-delete-left"></i></button>
+                                <button class = 'btn delete-key'><i class="fa-solid fa-delete-left"></i></button>
                             </div>
                         </td>
                     </tr>
@@ -344,6 +350,18 @@
             </table>
         </div>
     </div>
+ 
+    <div class="opaque-cover" style = "display: none;">   
+        <div class="winner" id = 'winScreen'>
+            <p>Congratulations! You guessed the word!</p>
+            <button onclick="window.location.reload();" class="btn btn-light" id="playAgain">Play Again?</button>
+        </div>
+        <div class="loser" id = 'loseScreen'>
+            <p>Awww, too bad.  Maybe next time?</p>
+            <button onclick="window.location.reload();" class="btn btn-light" id="playAgain">Play Again?</button>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src = "wordApp.js"></script>
 </body>
