fixed undiagnosed issue with other letters.  Appears fully functional. 3.12.23

--- a/what-word.html
+++ b/what-word.html
@@ -357,7 +357,7 @@
             <button onclick="window.location.reload();" class="btn btn-light" id="playAgain">Play Again?</button>
         </div>
         <div class="loser" id = 'loseScreen'>
-            <p>Awww, too bad.  Maybe next time?</p>
+            <p id = "loseText">Awww, too bad.  Maybe next time?</p>
             <button onclick="window.location.reload();" class="btn btn-light" id="playAgain">Play Again?</button>
         </div>
     </div>
